# jenga-auth

./: .gitignore  README.md  extensions.md  migrations.md
jenga-auth-backend/: jenga-auth-backend.cabal  jenga-auth-backend.cabal~
jenga-auth-backend/src/Jenga/Backend/DB/: Auth.hs  Auth.hs~  BeamInstances.hs  Emailing.hs  Instances.hs  LogItems.hs  OrgBased.hs  Subscriptions.hs
jenga-auth-backend/src/Jenga/Backend/Handlers/Auth/: Login.hs  Login.hs~  OAuth.hs  OAuth.hs~  RequestPasswordReset.hs  ResetPassword.hs  UserSignup.hs
jenga-auth-backend/src/Jenga/Backend/Handlers/Auth/OrgBased/: AddUsers.hs  AdminSignup.hs  AdminSignup.hs~  Invite.hs  RedeemLink.hs
jenga-auth-backend/src/Jenga/Backend/Handlers/Auth/Subscriptions/: CancelSubscription.hs  CancelSubscription.hs~  IsFreeTrialExpired.hs  NewFreeTrial.hs  NewSubscriber.hs  NewSubscriber.hs~
jenga-auth-backend/src/Jenga/Backend/Utils/: Account.hs  AuthHandlers.hs  CSV.hs  CSV.hs~  Cookies.hs  Date.hs  Email.hs  ErrorHandling.hs  HasConfig.hs  HasTable.hs  HttpJson.hs  Log.hs  Markdown.hs  Migrations.hs  Query.hs  Snap.hs
jenga-auth-common/: jenga-auth-common.cabal  jenga-auth-common.cabal~  todo.txt
jenga-auth-common/src/Jenga/Common/: Auth.hs  BeamExtras.hs  Cookie.hs  Errors.hs  HasJengaConfig.hs  HasJengaConfig.hs~  Log.hs  OAuth.hs  Schema.hs  ScrubPrefix.hs  Stripe.hs
jenga-auth-frontend/: jenga-auth-frontend.cabal  jenga-auth-frontend.cabal~
jenga-auth-frontend/src/Jenga/Frontend/: Api.hs  Consumable.hs  DomExtras.hs  FRPExtras.hs  JS.hs  MkTmpl.hs  Platform.hs  Promise.hs  Scroll.hs  Shuffle.hs  TimeExtras.hs
jenga-auth-frontend/src/Jenga/Frontend/Auth/: Authentication.hs  CompanySignup.hs  Login.hs  RedeemLink.hs  RequestPasswordReset.hs  ResetPassword.hs  Signup.hs  UserSignup.hs
jenga-auth-frontend/src/Jenga/Frontend/Auth/Subscribe/: Paywall.hs  StartFreeTrial.hs
