name: jenga-auth-common
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , aeson
               , attoparsec
               , base64-bytestring
               , beam-core
               , bytestring
               , containers
               , email-validate
               , lens
               , network-uri
               , mime-mail
               , mime-mail-orphans
               , obelisk-route
               , rhyolite-account-types
               , signed-data
               , stripe-core
               , template-haskell
               , text
               , time
               , transformers
               , uuid-types
  if !impl(ghcjs)
     build-depends: unicode-transforms

  exposed-modules:
        Jenga.Common.Auth
        Jenga.Common.OAuth
        Jenga.Common.BeamExtras
        Jenga.Common.Schema
        Jenga.Common.Cookie
        Jenga.Common.Errors
        Jenga.Common.HasJengaConfig
        Jenga.Common.ScrubPrefix
        Jenga.Common.Stripe
        Jenga.Common.Log

  ghc-options: -Wall -Werror -O -fno-show-valid-hole-fits
               -Wunused-packages

               -- -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits -Werror=incomplete-patterns

  default-extensions:
      AllowAmbiguousTypes
      BangPatterns
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      EmptyCase
      EmptyDataDecls
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      OverloadedStrings
      PolyKinds
      QuasiQuotes
      RankNTypes
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
